--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
           </div>
 
           <div class="add_btn">
-            <span> + </span> Добавить столбец
+            + Добавить карточку
           </div>
           
         </div>
       </div>
+
+      <div class="button">Добавить доску</div>
     </div>
 
     <script src="main.js"></script>
