--- a/index.html
+++ b/index.html
@@ -6,20 +6,28 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <link rel="stylesheet" href="style.css">
+    <link
+      rel="stylesheet"
+      href="style.css"
+    />
     <title>Trello Clone</title>
   </head>
   <body>
     <div class="website">
       <div class="boards">
         <div class="boards_item">
-          <span contenteditable="true" class="title">Введите название</span>
-          <div class="list">
-            <div class="list_item" draggable="true">Стартовая карточка</div>
-          </div>
+          <span
+            contenteditable="true"
+            class="title"
+            >Введите название</span
+          >
+          <div class="list"></div>
 
           <div class="form">
-            <textarea class="textarea" placeholder="Название карточки"></textarea>
+            <textarea
+              class="textarea"
+              placeholder="Название карточки"
+            ></textarea>
 
             <div class="buttons">
               <button class="add_item-btn">Добавить карточку</button>
@@ -27,10 +35,7 @@
             </div>
           </div>
 
-          <div class="add_btn">
-            + Добавить карточку
-          </div>
-          
+          <div class="add_btn">+ Добавить карточку</div>
         </div>
       </div>
 
